# snack_tracker_project

./: README.md  db.sqlite3  pyproject.toml
snacks/: models.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_auto_20210304_0537.py  0003_auto_20210304_1725.py  0004_auto_20210304_1741.py
templates/: base.html
tracker_project/: settings.py  urls.py
